[FEAT] Fix way to find commentLike,postLike: like_id => user_id+post_id or comment_id  and update openAPI doc
